--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "apollo-link-http": "^1.5.16",
     "graphql": "^15.0.0",
     "graphql-tag": "^2.10.3",
+    "node-sass": "^4.13.1",
     "react": "^16.13.1",
     "react-apollo": "^3.1.3",
     "react-dom": "^16.13.1",
