--- a/server/package.json
+++ b/server/package.json
@@ -24,8 +24,9 @@
     "express": "^4.17.1",
     "express-graphql": "^0.9.0",
     "fakergem": "^2.1.0",
-    "graphql": "^15.0.0",
+    "graphql": "^14.0.0",
     "graphql-playground-middleware-express": "^1.7.12",
+    "graphql-subscriptions": "^1.1.0",
     "graphql-tools": "^4.0.7",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
@@ -33,6 +34,8 @@
     "morgan": "^1.10.0",
     "nodemon": "^2.0.2",
     "passport": "^0.4.1",
-    "passport-jwt": "^4.0.0"
+    "passport-jwt": "^4.0.0",
+    "subscriptions-transport-ws": "^0.9.16",
+    "ws": "^7.2.3"
   }
 }
