--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,10 +5,15 @@ services:
     ports:
       - 5000:5000
     environment: 
+      NODE_ENV: production
       SECRET_OR_KEY: ${SECRET_OR_KEY}
       MONGO_URI: ${MONGO_URI}
+      
   client:
     build: ./client
     ports:
       - 3000:3000
+    environment: 
+      NODE_ENV: production
+      PRODUCTION_URI: http://client:3000
     stdin_open: true
