--- a/docker-compose.devel.yaml
+++ b/docker-compose.devel.yaml
@@ -7,11 +7,14 @@ services:
     ports:
       - 5000:5000
     environment: 
-      NODE_ENV: production
+      NODE_ENV: development
       SECRET_OR_KEY: ${SECRET_OR_KEY}
       MONGO_URI: ${MONGO_URI}
       REDIS_URI: redis
       DOCKERIZED: 'true'
+    command: npm run dev
+    volumes: 
+      - ./server:/usr/src/app
       
   client:
     build: ./client
@@ -20,8 +23,10 @@ services:
     ports:
       - 3000:3000
     environment: 
-      NODE_ENV: production
+      NODE_ENV: development
       PRODUCTION_URI: http://client:3000
+    volumes: 
+      - ./client:/usr/src/app
     stdin_open: true
 
   redis:
