--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,11 +7,14 @@ services:
     ports:
       - 5000:5000
     environment: 
-      NODE_ENV: production
+      NODE_ENV: development
       SECRET_OR_KEY: ${SECRET_OR_KEY}
+      PRODUCTION_URI: http://client:3000
       MONGO_URI: ${MONGO_URI}
       REDIS_URI: redis
       DOCKERIZED: 'true'
+    volumes: 
+      - ./server:/usr/src/app
       
   client:
     build: ./client
@@ -20,9 +23,10 @@ services:
     ports:
       - 3000:3000
     environment: 
-      NODE_ENV: production
-      PRODUCTION_URI: http://client:3000
+      NODE_ENV: development
     stdin_open: true
+    volumes: 
+      - ./client:/usr/src/app
 
   redis:
     image: redis:5.0.8-alpine
