bugfixes: * docker-compose now does `npm run dev` for the server
* websocket initialization delayed till user login event

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,6 +15,7 @@ services:
       DOCKERIZED: 'true'
     volumes: 
       - ./server:/usr/src/app
+    command: npm run dev
       
   client:
     build: ./client
