--- a/client/package.json
+++ b/client/package.json
@@ -17,11 +17,13 @@
     "graphql": "^14.0.0",
     "graphql-tag": "^2.10.3",
     "node-sass": "^4.13.1",
+    "prismjs": "^1.20.0",
     "react": "^16.13.1",
     "react-apollo": "^3.1.3",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
+    "react-simple-code-editor": "^0.11.0",
     "subscriptions-transport-ws": "^0.9.16"
   },
   "scripts": {
