--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "react": "^16.13.1",
     "react-apollo": "^3.1.3",
     "react-dom": "^16.13.1",
+    "react-modal": "^3.11.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "react-simple-code-editor": "^0.11.0",
