--- a/code_judge/package.json
+++ b/code_judge/package.json
@@ -5,16 +5,18 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon index.js"
+    "dev": "nodemon --ignore './test/' index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "1.19.0",
     "cors": "^2.8.5",
+    "docker-modem": "^2.1.3",
+    "dockerode": "^3.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "nodemon": "^2.0.2",
-    "body-parser": "1.19.0"
+    "nodemon": "^2.0.2"
   }
 }
