--- a/code_judge/package.json
+++ b/code_judge/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon --ignore './test/' index.js"
+    "dev": "nodemon --ignore test/ index.js"
   },
   "keywords": [],
   "author": "",
@@ -13,7 +13,6 @@
   "dependencies": {
     "body-parser": "1.19.0",
     "cors": "^2.8.5",
-    "docker-modem": "^2.1.3",
     "dockerode": "^3.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
