--- a/code_judge_server/package.json
+++ b/code_judge_server/package.json
@@ -1,21 +1,23 @@
 {
-  "name": "fake-gcp",
+  "name": "code-judge-server",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon --ignore test/ index.js"
+    "dev": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "body-parser": "1.19.0",
+    "bull": "^3.14.0",
     "cors": "^2.8.5",
-    "dockerode": "^3.2.0",
     "express": "^4.17.1",
-    "jsonwebtoken": "^8.5.1",
-    "nodemon": "^2.0.2"
+    "jsonwebtoken": "^8.5.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.4"
   }
 }
