--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,7 @@
 version: '3'
 services: 
-  code_judge:
-    build: ./code_judge
+  code_judge_server:
+    build: ./code_judge_server
     depends_on: 
       - redis
     ports: 
@@ -11,24 +11,40 @@ services:
       SECRET_OR_KEY: ${SECRET_OR_KEY}
       SERVER_URI: http://server:5000
       PORT: 5005
-      TESTING_DIR: $PWD/code_judge/test
+    volumes: 
+      - ./code_judge_server:/usr/src/app
+    command: npm run dev
+
+  code_judge_worker:
+    build: ./code_judge_worker
+    depends_on: 
+      - redis
+      - code_judge_server
+    ports: 
+      - 5006:5006
+    environment:
+      NODE_ENV: development
+      SECRET_OR_KEY: ${SECRET_OR_KEY}
+      SERVER_URI: http://code_judge_server:5005
+      PORT: 5006
+      TESTING_DIR: $PWD/code_judge_worker/test
     volumes: 
       - /var/run/docker.sock:/var/run/docker.sock
-      - ./code_judge:/usr/src/app
+      - ./code_judge_worker:/usr/src/app
     command: npm run dev
 
   server:
     build: ./server
     depends_on: 
       - redis
-      - code_judge
+      - code_judge_worker
     ports:
       - 5000:5000
     environment: 
       NODE_ENV: development
       SECRET_OR_KEY: ${SECRET_OR_KEY}
       PRODUCTION_URI: http://client:3000
-      CODE_JDG_URI: http://code_judge:5005
+      CODE_JDG_URI: http://code_judge_server:5005
       MONGO_URI: ${MONGO_URI}
       REDIS_URI: redis
       DOCKERIZED: 'true'
@@ -40,7 +56,7 @@ services:
     build: ./client
     depends_on: 
       - server
-      - code_judge
+      - code_judge_worker
     ports:
       - 3000:3000
     environment: 
