--- a/code_judge_worker/package.json
+++ b/code_judge_worker/package.json
@@ -16,7 +16,8 @@
     "cors": "^2.8.5",
     "dockerode": "^3.2.0",
     "express": "^4.17.1",
-    "jsonwebtoken": "^8.5.1"
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.9.16"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
