--- a/code_judge_server/package.json
+++ b/code_judge_server/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "fake-gcp",
-  "version": "1.0.0",
+  "name": "code-judge-server",
+  "version": "0.1.0",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -11,10 +11,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "1.19.0",
+    "bull": "^3.14.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "jsonwebtoken": "^8.5.1",
-    "nodemon": "^2.0.2",
-    "body-parser": "1.19.0"
+    "jsonwebtoken": "^8.5.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.4"
   }
 }
