--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,15 +1,48 @@
 version: '3'
 services: 
+  code_judge_server:
+    build: ./code_judge_server
+    depends_on: 
+      - redis
+    ports: 
+      - 5005:5005
+    environment:
+      NODE_ENV: development
+      SECRET_OR_KEY: ${SECRET_OR_KEY}
+      SERVER_URI: http://server:5000
+      REDIS_URI: redis://redis
+      PORT: 5005
+    volumes: 
+      - ./code_judge_server:/usr/src/app
+    command: npm run dev
+
+  code_judge_worker:
+    build: ./code_judge_worker
+    depends_on: 
+      - redis
+      - code_judge_server
+    environment:
+      NODE_ENV: development
+      MONGO_URI: ${WORKER_MONGO_URI}
+      REDIS_URI: redis://redis
+      TESTING_DIR: $PWD/code_judge_worker/test
+    volumes: 
+      - /var/run/docker.sock:/var/run/docker.sock
+      - ./code_judge_worker:/usr/src/app
+    command: npm run dev
+
   server:
     build: ./server
     depends_on: 
       - redis
+      - code_judge_worker
     ports:
       - 5000:5000
     environment: 
       NODE_ENV: development
       SECRET_OR_KEY: ${SECRET_OR_KEY}
       PRODUCTION_URI: http://client:3000
+      CODE_JDG_URI: http://code_judge_server:5005
       MONGO_URI: ${MONGO_URI}
       REDIS_URI: redis
       DOCKERIZED: 'true'
@@ -21,6 +54,7 @@ services:
     build: ./client
     depends_on: 
       - server
+      - code_judge_worker
     ports:
       - 3000:3000
     environment: 
