--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "apollo-server-express": "^2.11.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "bull": "^3.14.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
