--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "apollo-link-error": "^1.1.12",
     "apollo-link-http": "^1.5.16",
     "apollo-link-ws": "^1.0.19",
+    "faker": "^4.1.0",
     "graphql": "^14.0.0",
     "graphql-tag": "^2.10.3",
     "node-sass": "^4.14.1",
