--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -1,10 +1,11 @@
 {
   "short_name": "CodeDueler",
   "name": "CodeDueler",
+  "description": "A real-time, colosseum style coding challenge game",
   "icons": [
     {
       "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
+      "sizes": "256x256 64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     }
   ],
